--- a/05-Design/style.css
+++ b/05-Design/style.css
@@ -15,8 +15,20 @@ FONT SIZE SYSTEM (px)
 /* ------------------------ */
 /* GENERAL STYLES */
 /* ------------------------ */
+
+/* COLORs 
+MAIN: #087f5b 
+GREY COLOR: #343a40
+
+*/
+
+
+
+
 body {
   font-family: 'Inter', sans-serif;
+  color: #343a40;
+  border-bottom: 8px solid #087f5b;
 }
 
 .container {
@@ -41,6 +53,28 @@ h2 {
   column-gap: 80px;
 }
 
+.btn:link, .btn:visited {
+  background-color: #087f5b ;
+  color: #fff;
+  text-decoration: none;
+  text-transform: uppercase;
+  display: inline-block;
+  font-weight: 500;
+}
+
+.btn:hover, .btn:active{
+  background-color: #099268;
+}
+
+.btn--big{
+  padding: 16px 32px;
+  font-size: 18px;
+}
+
+.btn--small{
+  padding: 8px 12px;
+  font-size: 14px;
+}
 /* ------------------------ */
 /* COMPONENT STYLES */
 /* ------------------------ */
@@ -90,6 +124,9 @@ img {
 
 /* TESTIMONIAL */
 .testimonial-section {
+  background-color: #087f5b;
+  color: #fff;
+  padding: 24px;
 }
 
 .testimonial-box {
@@ -148,4 +185,5 @@ h3 {
 footer {
   margin-bottom: 48px;
   font-size: 14px;
+  color: #495057;
 }
