--- a/05-Design/style.css
+++ b/05-Design/style.css
@@ -108,8 +108,13 @@ img {
   width: 100%;
 }
 
+
 /* FEATURES */
 .features-icon {
+  stroke:#087f5b;
+  width: 32px;
+  height: 32px;
+  margin-bottom: 16px;
 }
 
 .features-title {
@@ -147,6 +152,10 @@ img {
 }
 
 /* CHAIRS */
+/* .chair{
+  box-shadow: 0px 20px 30px 0 rgba(0, 0, 0, 0.07);
+} */
+
 .chair-box {
   padding: 24px;
 }
@@ -174,6 +183,9 @@ h3 {
 }
 
 .chair-icon {
+  stroke:#087f5b;
+  width: 24px;
+  height: 24px;
 }
 
 .chair-price {
