--- a/05-Design/style.css
+++ b/05-Design/style.css
@@ -152,9 +152,9 @@ img {
 }
 
 /* CHAIRS */
-/* .chair{
+.chair{
   box-shadow: 0px 20px 30px 0 rgba(0, 0, 0, 0.07);
-} */
+}
 
 .chair-box {
   padding: 24px;
