--- a/05-Design/style.css
+++ b/05-Design/style.css
@@ -60,6 +60,8 @@ h2 {
   text-transform: uppercase;
   display: inline-block;
   font-weight: 500;
+
+  border-radius: 100px;
 }
 
 .btn:hover, .btn:active{
@@ -106,6 +108,7 @@ h1 {
 
 img {
   width: 100%;
+  border-radius: 12px;
 }
 
 
@@ -132,6 +135,8 @@ img {
   background-color: #087f5b;
   color: #fff;
   padding: 24px;
+  
+  border-radius: ;
 }
 
 .testimonial-box {
@@ -154,6 +159,13 @@ img {
 /* CHAIRS */
 .chair{
   box-shadow: 0px 20px 30px 0 rgba(0, 0, 0, 0.07);
+
+  border-radius: 12px;
+}
+
+.chair img{
+  border-bottom-left-radius: 0px;
+  border-bottom-right-radius: 0px;
 }
 
 .chair-box {
