--- a/05-Design/style.css
+++ b/05-Design/style.css
@@ -38,7 +38,7 @@ body {
 
 header,
 section {
-  margin-bottom: 48px;
+  margin-bottom: 96px;
 }
 
 h2 {
@@ -86,7 +86,7 @@ header {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   column-gap: 80px;
-  margin-top: 48px;
+  margin-top: 64px;
 }
 
 .header-text-box {
@@ -94,7 +94,7 @@ header {
 }
 
 h1 {
-  margin-bottom: 24px;
+  margin-bottom: 32px;
   font-size: 44px;
   line-height: 1.2;
   letter-spacing: -1px;
@@ -117,7 +117,7 @@ img {
   stroke:#087f5b;
   width: 32px;
   height: 32px;
-  margin-bottom: 16px;
+  margin-bottom: 24px;
 }
 
 .features-title {
@@ -154,12 +154,17 @@ img {
   margin-bottom: 24px;
   font-size: 18px;
   line-height: 1.7;
+  color:#e6fcf5;
+}
+
+.testimonial-author{
+  color: #c3fae8;
 }
 
 /* CHAIRS */
-.chair{
-  box-shadow: 0px 20px 30px 0 rgba(0, 0, 0, 0.07);
 
+.chair {
+  box-shadow: 0px 20px 30px 0 rgba(0, 0, 0, 0.07);
   border-radius: 12px;
 }
 
@@ -179,14 +184,14 @@ h3 {
 
 .chair-details {
   list-style: none;
-  margin-bottom: 24px;
+  margin-bottom: 48px;
 }
 
 .chair-details li {
   display: flex;
   align-items: center;
   gap: 12px;
-  margin-bottom: 24px;
+  margin-bottom: 16px;
 
 }
 
@@ -204,6 +209,7 @@ h3 {
   display: flex;
   justify-content: space-between;
   font-size: 20px;
+  align-items: center;
 }
 
 footer {
